--- a/module_1.1/hw_1.1_statistis_basics.ipynb
+++ b/module_1.1/hw_1.1_statistis_basics.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/daria-pavlova/python_for_ds_tasks/blob/main/%D0%94%D0%BE%D0%BC%D0%B0%D1%88%D0%BD%D1%94_%D0%B7%D0%B0%D0%B2%D0%B4%D0%B0%D0%BD%D0%BD%D1%8F_%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%B8_%D1%81%D1%82%D0%B0%D1%82%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/daria-pavlova/python_for_ds_tasks/blob/main/module_1.1/hw_1.1_statistis_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "MoxhjgB0aOia"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "B1mgx_IBT0e8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "_9kMt3rq6V5m"
       },
@@ -172,7 +172,7 @@
       "metadata": {
         "id": "qS_CSQgQZ_by"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "I6ssCpwQc3CI"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "sLD7INzIf1mi"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,82 +493,23 @@
       "cell_type": "code",
       "source": [
         "students=[16]*10+[17]*25+[18]*20+[20]*2\n",
-        "students"
+        "print(students)"
       ],
       "metadata": {
         "id": "RdIU4M-7T8R4",
-        "outputId": "9a31086e-f712-4951-c06a-a5458b08e5ae",
+        "outputId": "6448fc0d-604f-4699-9a84-6cf4b0e2fa87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 20,\n",
-              " 20]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 20, 20]\n"
+          ]
         }
       ]
     },
@@ -584,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -623,7 +564,7 @@
       "metadata": {
         "id": "4OIGBT7UOWhO"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +580,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +634,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +661,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +688,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +715,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +747,7 @@
         "id": "gaeoGA-5Prr1",
         "outputId": "22409d03-e26c-4a54-8c0e-2a76b6b0ddb7"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -849,7 +790,7 @@
       "metadata": {
         "id": "EcqYe-qSiDby"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -893,7 +834,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +862,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +884,7 @@
       "metadata": {
         "id": "pIfTRVuHip11"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +899,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,7 +928,7 @@
           "height": 472
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
