--- a/module_1.1/hw_1.1_statistis_basics.ipynb
+++ b/module_1.1/hw_1.1_statistis_basics.ipynb
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "_9kMt3rq6V5m"
       },
@@ -245,45 +245,23 @@
     {
       "cell_type": "code",
       "source": [
-        "sorted(sum_purchases)"
+        "print(sorted(sum_purchases))"
       ],
       "metadata": {
         "id": "x58BumvuT2nl",
-        "outputId": "0ffc8efd-5cba-43f2-abed-a40abeac5419",
+        "outputId": "36a62ee3-48cb-49b1-d9a0-55a7bd58b13f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[121,\n",
-              " 124,\n",
-              " 153,\n",
-              " 196,\n",
-              " 223,\n",
-              " 224,\n",
-              " 239,\n",
-              " 255,\n",
-              " 281,\n",
-              " 316,\n",
-              " 322,\n",
-              " 367,\n",
-              " 397,\n",
-              " 432,\n",
-              " 448,\n",
-              " 450,\n",
-              " 484,\n",
-              " 493,\n",
-              " 3524,\n",
-              " 4310]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[121, 124, 153, 196, 223, 224, 239, 255, 281, 316, 322, 367, 397, 432, 448, 450, 484, 493, 3524, 4310]\n"
+          ]
         }
       ]
     },
@@ -493,23 +471,82 @@
       "cell_type": "code",
       "source": [
         "students=[16]*10+[17]*25+[18]*20+[20]*2\n",
-        "print(students)"
+        "students"
       ],
       "metadata": {
         "id": "RdIU4M-7T8R4",
-        "outputId": "6448fc0d-604f-4699-9a84-6cf4b0e2fa87",
+        "outputId": "9a31086e-f712-4951-c06a-a5458b08e5ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 20, 20]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 16,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 17,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 18,\n",
+              " 20,\n",
+              " 20]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
