--- a/module_1.1/hw_1.1_statistis_basics.ipynb
+++ b/module_1.1/hw_1.1_statistis_basics.ipynb
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_9kMt3rq6V5m"
       },
@@ -249,12 +249,12 @@
       ],
       "metadata": {
         "id": "x58BumvuT2nl",
-        "outputId": "36a62ee3-48cb-49b1-d9a0-55a7bd58b13f",
+        "outputId": "aa690efb-283a-4b05-ab6a-a4c9b41cd183",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,82 +471,23 @@
       "cell_type": "code",
       "source": [
         "students=[16]*10+[17]*25+[18]*20+[20]*2\n",
-        "students"
+        "print(students)"
       ],
       "metadata": {
         "id": "RdIU4M-7T8R4",
-        "outputId": "9a31086e-f712-4951-c06a-a5458b08e5ae",
+        "outputId": "5d16155d-147b-494f-b864-11f7804e526c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 16,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 17,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 18,\n",
-              " 20,\n",
-              " 20]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 20, 20]\n"
+          ]
         }
       ]
     },
